--- a/assets/style.css
+++ b/assets/style.css
@@ -171,9 +171,9 @@
   margin-top: 10px;
 }
 .section3-img {
-  /* width: 1280px; */
+  /* width: 1000px; */
   bottom: -120px;
-  left: 300px;
+  left: 410px;
   display: flex;
   margin: auto;
   position: absolute;
@@ -439,14 +439,23 @@
   height: 100px;
   text-align: center;
   background-color: #3b67d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 
   margin-top: 30px;
 }
 .section-10 h3 {
   text-decoration: underline;
-  padding-top: 50px;
+  
 
   color: white;
+}
+.svgs{
+  width: 50px;
+  height: 50px;
+  filter: invert();
 }
 .footer {
   width: 100%;
@@ -533,20 +542,28 @@
 /* ======================================login-page============================ */
 
 .login {
-  width: 100%;
-  height: 100vh;
-  background-color: #0e0e0e91;
-  display: flex;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: #0e0e0e4a;
+  position: absolute;
+  display: none;
 }
 .login-card {
   width: 420px;
   height: 690px;
-  background-color: white;
   border-radius: 30px;
   margin: auto;
+  display: flex;  
+gap: 15px;
+margin-top: 30px;
+}
 
-  align-items: center;
-  justify-content: center;
+.login-container{
+  background-color: white;
+  padding: 10px 15px;
+  border-radius: 20px;
 }
 .login-1{
   width: 350px;
@@ -596,4 +613,13 @@
 .login-3 h4{
   font-weight: 500;
   font-size: larger;
+}
+
+.closeBtn{
+  height: 30px;
+  width: 30px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 25px;
 }
